src/containers/Tablet/components/TabletStorageInfo/TabletStorageInfo.scss
@import '../../../../styles/mixins.scss';

.ydb-tablet-storage-info {
    $block: &;
    &__table {
        table-layout: fixed;
        border-spacing: 0px;
        border-collapse: collapse;
        tr {
            &:hover {
                background-color: var(--g-color-base-generic-hover) !important;
            }
        }
        tr:nth-of-type(2n + 1) {
            background-color: var(--g-color-base-generic-ultralight);
        }
        :is(#{$block}__table-header-cell) {
            height: 40px;
            padding: 0;

            text-align: left;

            background-color: var(--g-color-base-background);
            @include text-subheader-2();
        }
        :is(#{$block}__table-cell) {
            height: 40px;
            padding: 0;
            @include text-body-2();
        }
    }

    &__table-header-cell {
        &_align_right {
            #{$block}__table-header-content {
                justify-content: flex-end;

                text-align: right;
            }
        }
    }

    &__table-header-content {
        display: flex;
        align-items: center;

        height: 100%;
        padding: var(--g-spacing-1) var(--g-spacing-2);

        vertical-align: middle;

        border-bottom: 1px solid var(--g-color-line-generic);
    }
    :is(#{$block}__table-cell) {
        height: 40px;
        padding: 0;
        @include text-body-2();
    }
    &__table-cell {
        &_align_right {
            text-align: right;
        }
    }
    &__metrics-cell {
        padding: var(--g-spacing-1) var(--g-spacing-2);

        white-space: nowrap;
    }
    &__name-wrapper {
        padding: var(--g-spacing-1) var(--g-spacing-2);
    }
    &__with-padding {
        padding-left: calc(var(--g-spacing-2) + var(--g-spacing-6));
    }
    &__name-content_no-control {
        padding-left: var(--g-spacing-6);
    }
}

